# rust-aliasable-deref-trait

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs
