[package]
name = "aliasable_deref_trait"
version = "0.2.1"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"
description = "Marker trait indicating a pointer type can have it's pointee safely aliased"
documentation = "https://docs.rs/aliasable_deref_trait"
homepage = "https://github.com/avitex/rust-aliasable-deref-trait"
repository = "https://github.com/avitex/rust-aliasable-deref-trait"
categories = ["memory-management", "no-std"]
license = "MIT"

[dependencies]

[features]
default = ["std"]
std = []
alloc = []