[package]
name = "aliasable_deref_trait"
version = "0.2.1"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2018"
description = "Marker trait for types that deref to an address that is aliasable when coerced to a raw pointer"
keywords = ["aliasable", "deref", "trait"]
categories = ["memory-management", "no-std"]
documentation = "https://docs.rs/aliasable_deref_trait"
homepage = "https://github.com/avitex/rust-aliasable-deref-trait"
repository = "https://github.com/avitex/rust-aliasable-deref-trait"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md", "LICENSE", "Cargo.toml"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
